@@ -180,18 +180,27 @@ warnings with some news reader clients), you can create and install one in
 the default path by running C<make cert> after C<make install> when
 installing INN, or by running the following commands:
 
-    openssl req -new -x509 -nodes -out <pathnews>/lib/cert.pem \
-        -days 366 -keyout <pathnews>/lib/key.pem
-    chown news:news <pathnews>/lib/cert.pem
-    chmod 640 <pathnews>/lib/cert.pem
-    chown news:news <pathnews>/lib/key.pem
-    chmod 600 <pathnews>/lib/key.pem
+    openssl req -new -x509 -nodes -out <pathetc>/cert.pem \
+        -days 366 -keyout <pathetc>/key.pem
+    chown news:news <pathetc>/cert.pem
+    chmod 640 <pathetc>/cert.pem
+    chown news:news <pathetc>/key.pem
+    chmod 600 <pathetc>/key.pem
 
 Replace the paths with something appropriate to your INN installation.
 This will create a self-signed certificate that will expire in a year.
 The B<openssl> program will ask you a variety of questions about your
 organization.  Enter the fully qualified domain name of the server as the
 name the certificate is for.
+
+You then have to set these F<inn.conf> parameters with the right paths:
+
+    tlscapath:      <pathetc>
+    tlscertfile:    <pathetc>/cert.pem
+    tlskeyfile:     <pathetc>/key.pem
+
+In case you have a certificate authority root certificate, you can also
+set I<tlscafile> to its path.
 
 Most news clients currently do not use the STARTTLS command, however, and
 instead expect to connect to a separate port (563) and start a TLS
